Changes are listed below, grouped under each point release of SuperCollider.

Recent changes (will be SuperCollider v3.3.1)
=======================================

Headlines:
----------

Bugfixes:
---------

* 2009-05-15 update libsndfile to 1.0.20 to fix security issues (overflow vulnerabilities) in libsndfile - ds

Other additions/improvements:
-----------------------------

SuperCollider v3.3, released 2009-04-30
=======================================

Headlines:
----------
* 2008-04-08 scvim is now part of the distro - ds
* 2008-04-20 improvements to MIDI sysex handling - added sysex parsing directly in source - thanks to charles picasso
* 2008-07-12 scsynth on Mac can now use separate devices for audio input vs audio output. Thanks to Axel Balley for much of the work on this, also a bit by ds.
* 2008-07-12 PlayBuf, RecordBuf, BufWr, BufRd, ScopeOut - used to be limited to 16-channel audio maximum. Now can handle massively multichannel audio - ds
* 2008-07-19 Buffer:normalize method added - ds
* 2008-07-23 FFT and IFFT added option for zero-padding, by optional "framesize" argument - ds
* 2008-09-03 new VDiskIn ugen - jp
* 2008-10-08 SCImage for manipulating bitmap image objects (mac only) - ch
* 2008-10-09 LocalBuf system to allow synths to manage their own purely-local buffers - jr
* 2008-10-17 Added "-P" option to scsynth (accessible as s.options.restrictedPath) to allow restricting which paths scsynth is allowed to read/write - ds
* 2008-10-18 new PartConv ugen, performs efficient frequency-domain convolution - nc
* 2008-10-26 support on mac for "modal windows/sheets" (for user dialogs etc) - sw
* 2008-xx-xx various behind-the-scenes efficiency improvements, for a sleeker audio server that can do more on a given machine - various contributors
* 2008-11-01 add BEQSuite filter UGens (blackrain, jp)
* 2008-11-11 add Pfxb pattern - jr
* 2008-11-25 new EZPopUpMenu - jm
* 2008-11-29 Pitch ugen can now also track the pitch of control-rate signals - mb