@@ -6,13 +6,25 @@ Recent changes (will be SuperCollider v3.3.1)
 Headlines:
 ----------
 
+* 2009-05-11 SCWindow additions for visible, visible_, unminimize - c
+* 2009-05-17 server guis (on osx) now indicate which one is currently default - adc
+* 2009-05-18 enabled control rate versions of Ball, TBall and Spring - mb
+* 2009-05-18 LID support for setting "MSC" state as well as "LED" on devices - ds
+
 Bugfixes:
 ---------
 
+* 2009-05-11 fix keyword addressing for the order: argument - jmc
 * 2009-05-15 update libsndfile to 1.0.20 to fix security issues (overflow vulnerabilities) in libsndfile - ds
 
 Other additions/improvements:
 -----------------------------
+
+* 2009-05-05 fixes/improvements to cocoabridge primitives - c
+* 2009-05-06 SCImage various minor improvements - c
+* 2009-05-16 optimisation for scrollview drawing, remove VIEWHACK - sw
+* 2009-05-xx various documentation updates - various
+* 2009-05-xx various improvements to ubuntu-debian packaging scripts - ds, am
 
 SuperCollider v3.3, released 2009-04-30
 =======================================
